# de-list-server

./: .gitignore  Cargo.toml  README.md
src/: egg_mode_2.rs  error.rs  main.rs
templates/: hello.html  logged_in.html  redirect.html
