[package]
name = "de-list-server"
version = "0.1.0"
authors = ["David McGillicuddy <contact@djmcgill.co.uk>"]
edition = "2018"
licence = "MIT"

[dependencies]
hyper = "0.12"
log = "0.4.0"
env_logger = "0.6.1"
tera = "0.11"
lazy_static = "1.3.0"
futures = "0.1"
egg-mode = "0.12.0"
sha-1 = "0.8.1"
url = "1.7.2"
base64 = "0.10.1"
hmac = "0.7.0"
hyper-tls = "0.3.2"
rand = "0.6.5"

[dependencies.rusqlite]
version = "0.17.0"
features = ["bundled"]
git = "https://github.com/jgallagher/rusqlite"
