[package]
name = "de-list-server"
version = "0.1.0"
authors = ["David McGillicuddy <contact@djmcgill.co.uk>"]
edition = "2018"

[dependencies]
hyper = { version = "~0.13.0-alpha", "git" = "https://github.com/hyperium/hyper.git" }
futures-preview = { version = "~0.3.0-alpha", features = ["compat"] }
tokio = "~0.2.0-alpha.4"
